# METPOLE_AI

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DESIGN.md  DesignDoc.txt  Dockerfile  Error.txt  Makefile  PROMPT.md  Prompt.txt  README.md  README_corpus_validation.md  TODO.txt  docker-compose.yml  env.example  fly.toml  main.py  manage_git_index.py  metropole_ai_bp.md  metropole_ai_spec.md  nginx.conf  pytest.ini  remove_old_indexes.py  render.yaml  repomix-output.xml  requirements.txt  run_pipeline.py  run_pytest_with_env.sh  run_tests.py  test_deployment.py  test_retrieval.py  update_git_index.py  validate_corpus.py  validate_corpus.sh  vercel.json
backend/: Dockerfile  __init__.py  fly.toml  online_content_pipeline.py  pipeline.py  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  start.sh
backend/api/: routes.py
backend/configer/: config.py  logging_config.py
backend/crawler/: crawl.py  extract_content.py  utils.py
backend/data/index/: chroma.sqlite3
backend/data_processing/crawlers/: local_crawler.py  web_crawler.py
backend/data_processing/embedder/: embedding_utils.py
backend/data_processing/models/: content_chunk.py
backend/data_processing/parsers/: pdf_parser.py  unified_html_parser.py
backend/data_processing/pipeline/: directory_utils.py  pipeline_orchestration.py
backend/data_processing/tests/: conftest.py  pytest.ini  test_api.py  test_auth.py
backend/embedder/: embed_corpus.py
backend/logger/: logging_config.py
backend/pipeline/: offline_content_pipeline.py  process_documents.py
backend/pipeline/processors/: __init__.py  docx_processor.py  msg_processor.py  pdf_processor.py
backend/retriever/: ask.py
backend/scripts/: ci-validate.sh  inspect_db.py  test.sh
backend/server/: __init__.py  app.py  app_config.py  auth.py  config.py  database.py
backend/server/api/: __init__.py  auth.py  models.py  routes.py
backend/server/cli/: admin.py  config.py  feedback.py
backend/server/database/: connection.py  schema.sql
backend/server/retriever/: __init__.py  ask.py  models.py
backend/server/tests/: README.md  __init__.py  conftest.py  pytest.ini  test_app.py  test_auth.py  test_mocks.py  test_nginx.conf
backend/tests/: output_corpus.json  pytest.ini  test_pipeline.py
backend/tests/models/: test_content_chunk.py
backend/tests/test_crawler/: test_crawl.py  (+2 more)
backend/vector_store/: __init__.py  init_chroma.py
(+248 files in other folders)
